questions service e controller
